# Complab3D-Biotic-Kinetic-AndersopnNR

./: .gitignore  ARKE_Game_Dialogues_and_Information.docx  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CompLaB.xml  CompLaB5.xml  CompLaB_planktonic.xml  CompLaBtest.xml  HOW_TO_RUN_TESTS.txt  INSTALL.md  JOSS_CHECKLIST.txt  README.md  TESTING.md  codemeta.json  comp.sh  defineAbioticKinetics.hh  defineKinetics.hh  defineKinetics_planktonic.hh  generate_game_text_doc.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cpp-tests.yml  draft-pdf.yml  gui-tests.yml
GUI/: Abiotic_-_First_Order_Decay.complab  CompLaB.xml  Flow_Only.complab  README.md  Untitled.complab  abio-firstdecay.complab  abiotic.complab  defineAbioticKinetics.hh  defineKinetics.hh  difusion-only.complab  flow-only.complab  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.bat  run_gui.sh  testtwo.complab
GUI/DAT/: geometry_README.txt
GUI/DAT/abiotic-paralel-plate/: README.txt
GUI/DAT/abiotic-rctangular/: README.txt
GUI/DAT/abiotic-reaction-chamb/: README.txt
GUI/Flow_Only/: Flow_Only.complab
GUI/geometry/: geometry_README.txt
GUI/gui/: CompLaB_Tutorial.txt  README.md  __init__.py  __main__.py  build.py  main.py  requirements.txt  run_gui.py
GUI/gui/docs/: CompLaB_Studio_User_Guide.docx
GUI/gui/src/: __init__.py  config.py  main_window.py
GUI/gui/src/core/: __init__.py  project.py  project_manager.py  project_templates.py  simulation_runner.py
GUI/gui/src/dialogs/: __init__.py  about_dialog.py  geometry_creator_dialog.py  kinetics_editor_dialog.py  new_project_dialog.py  preferences_dialog.py
GUI/gui/src/panels/: __init__.py  base_panel.py  boundary_panel.py  chemistry_panel.py  domain_panel.py  mesh_panel.py  microbiology_panel.py  monitoring_panel.py  postprocess_panel.py  project_panel.py  solver_panel.py
GUI/gui/src/widgets/: __init__.py  console_widget.py  splash_screen.py  vtk_viewer.py
GUI/gui/styles/: light.qss  main.qss
GUI/input/: README.txt
GUI/output/: NSlattice0000000.vti  crash_diagnostic_20260216_174247.txt  crash_diagnostic_20260216_183936.txt  crash_diagnostic_20260216_184918.txt  crash_diagnostic_20260216_184928.txt  crash_diagnostic_20260216_185210.txt  crash_diagnostic_20260216_185220.txt  crash_diagnostic_20260216_185409.txt  crash_diagnostic_20260216_185531.txt  crash_diagnostic_20260216_190614.txt  crash_diagnostic_20260216_190641.txt  crash_diagnostic_20260216_190716.txt  crash_diagnostic_20260216_190756.txt  inputGeom.vti
GUI/output-flowonly/: NSlattice0000000.vti
GUI/output_diffusion/: inputGeom.vti
GUI/src/: config.py  main_window.py
GUI/src/core/: __init__.py  kinetics_templates.py  project.py  project_manager.py  simulation_runner.py  templates.py  xml_diagnostic.py
GUI/src/dialogs/: __init__.py  about_dialog.py  geometry_creator_dialog.py  kinetics_editor_dialog.py  new_project_dialog.py  preferences_dialog.py
GUI/src/panels/: __init__.py  base_panel.py  boundary_panel.py  chemistry_panel.py  domain_panel.py  equilibrium_panel.py  fluid_panel.py  general_panel.py  io_panel.py  microbiology_panel.py  monitoring_panel.py  parallel_panel.py  postprocess_panel.py  run_panel.py  simulation_mode_panel.py  solver_panel.py  sweep_panel.py
GUI/src/widgets/: __init__.py  collapsible_section.py  console_widget.py  convergence_plot.py  geometry_preview.py  model_tree.py  vtk_viewer.py
GUI/styles/: light.qss  theme.qss
GUI/tests/: conftest.py  test_gui_panels.py  test_kinetics.py  test_pipeline_e2e.py  test_project_model.py  test_simulation_runner.py  test_templates.py  test_xml_io.py
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  complab.slnx  complab.vcxproj  complab.vcxproj.filters  palabos.vcxproj  palabos.vcxproj.filters
docs/: ARKE_Game_Manual.docx  ARKE_Game_Manual.html  ARKE_Game_Tutorial_and_Science_Guide.md  CompLaB3D_Code_Explanation.md  CompLaB3D_Technical_Guide.md  CompLaB3D_Test_Cases.md  CompLaB3D_Tutorial.docx  CompLaB3D_User_Tutorial.md  Geometry_Generator_Tutorial.md  HOW_TO_EXPORT_AND_SHARE.md  HOW_TO_MAKE_A_GAME_LIKE_THIS.md  METHI_Game_Tutorial_and_Science_Guide.md  PPT_Speaker_Notes.txt  QUICK_START_TUTORIAL.md  Rival_AI_Flowchart.pptx  create_tutorial_docx.py  rival_ai_flowchart.py
docs/manual_sections/: 00_styles.css  01_cover.html  02_story.html  03_characters.html  04_controls.html  05_substrates.html  06_growth_division.html  07_worlds.html  08_levels.html  09_hud_hazards.html
game/: export_presets.cfg  index.html  project.godot
game/js/: audio.js  config.js  engine.js  entities.js  game.js  main.js  sprites.js  world.js
game/scripts/: colony_cell.gd  hud.gd  main.gd  player.gd  rival.gd  substrate.gd  world.gd
itch/: devlog_post.md  itch_metadata.txt  page_description.html
kinetics/: README.md
kinetics/01_flow_only/: README.md  defineAbioticKinetics.hh  defineKinetics.hh
kinetics/02_diffusion_only/: README.md  defineAbioticKinetics.hh  (+1 more)
output_planktonic/: simulation_20260211_190649.out  simulation_20260211_191245.out
paper/: generate_figure.py  paper.bib  paper.md
src/: complab-backup.cpp  complab.cpp  complab3d_processors.hh  complab3d_processors_part1.hh  complab3d_processors_part2.hh  complab3d_processors_part3.hh  complab3d_processors_part4_eqsolver.hh  complab_functions.hh  debugversion-complab3d_processors_part1.hh
tests/: run_validation.py
tests/cpp/: CMakeLists.txt  complab3d_processors_part4_eqsolver_standalone.hh  plb_shim.h  test_abiotic_kinetics.cpp  test_biotic_kinetics.cpp  test_diagnostics.cpp  test_eq_solver.cpp  test_lbm_utils.cpp  test_planktonic_kinetics.cpp  test_stability.cpp
tools/: apply_manual_updates.py  gen_manual_svgs.py  generate_cover_art.py  geometry_generator.py  rebuild_manual.py  update_manual_images.py
trailer/: .gitignore  index.html  package-lock.json  package.json  record.js
versionControl/: Important please read.txt
(+80 files in other folders)
